fix: Register Biblio Controller and Service Working
